syntax = "proto3";

import "google/protobuf/empty.proto";

package portdomain;

option go_package = "internal/portdomainsvc/proto";

service PortDomain {
  rpc Upsert(stream Port) returns (google.protobuf.Empty);
  rpc GetPort(GetPortRequest) returns (Port);
}

message GetPortRequest {
  int64 port_id = 1;
}

message Port {
  int64 id = 1;
  string id_str = 2;
  string name = 3;
  string city = 4;
  string country = 5;
  repeated double coordinates = 6;     // long, lat
  string provice = 7;
  string timezone = 8;
  string code = 9;

  repeated string regions = 10;
  repeated string unlocs = 11;
  repeated string alias = 12;
}


